HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldInitMissing/Expected.uv
//! Expected diagnostic metadata for the RecordFieldInitMissing rejected-source specimen.

expectedDiagnostic("E-TYP-1902", "rule.16.Record-FieldInit-Missing")
